--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
-div {(Red: #f00; Orange: #ffa500; Yellow: #ff0; Green: #00bc3f; Blue: #06f; Indigo: #8a2be2; Violet: #d300c9).} 
-
-  border: 20px solid #000; /* this is short hand for setting 
+div {
+  border: 20px solid #000; /* this is short hand for setting
                             the border's width, its type, and color */
   display: inline-block; /* a way of positioning elements */
   min-width: 20em; /* the two min styles make the shape */
@@ -9,4 +8,28 @@ div {(Red: #f00; Orange: #ffa500; Yellow: #ff0; Green: #00bc3f; Blue: #06f; Indi
   border-left-color: transparent; /* these remove the color from the left side */
   border-right-color: transparent; /* the right side */
   border-bottom-color: transparent; /* and the bottom of the circle */
+}
+#red {
+  border-top-color: #f00;
+ }
+#orange {
+  border-top-color: #ff751a;
+}
+#yellow {
+  border-top-color: #ffff33;
+}
+#green {
+  border-top-color: #00e600;
+}
+#blue {
+  border-top-color:#0000ff;
+}
+#Indigo {
+  border-top-color:#5900b3
+
+;
+}
+
+#Violet {
+  border-top-color:#9933ff;
 }
